[package]
name = "kyberlib"
description = "A robust, audit-friendly Rust implementation of FIPS 203 ML-KEM (the standardised CRYSTALS-Kyber post-quantum KEM)."
documentation = "https://docs.rs/kyberlib"
readme = "../../README.md"
categories = ["algorithms", "cryptography", "no-std"]
keywords = ["ml-kem", "kyber", "kem", "post-quantum", "fips203"]
build = "build.rs"

# Inherit shared metadata from the workspace root.
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

include = [
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/SECURITY.md",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/src/**",
    # Test *code* ships so downstream consumers can reproduce the
    # gauntlet under `cargo test --tests`. Test *fixtures* (ACVP
    # JSON, KAT vectors, the C buffer-generator harness) do NOT —
    # they add ~1.3 MB and are only needed in this repo's CI.
    "/tests/*.rs",
    # Benchmarks ship so downstream can reproduce timing on their
    # own hardware. The hex fixture file (~30 KB) is small enough
    # to ship alongside.
    "/benches/**",
]

[dependencies]
# The library uses only the trait surface from `rand_core::{CryptoRng,
# RngCore}` — the `rand` crate proper is a dev-only dep (tests, doctests,
# examples, benches). Keeping it out of the runtime closure shrinks the
# downstream dependency graph for `cargo install kyberlib` consumers.
aes       = { workspace = true, optional = true }
ctr       = { workspace = true, optional = true }
rand_core = { workspace = true }
sha2      = { workspace = true, optional = true }
zeroize   = { workspace = true }

[dev-dependencies]
criterion  = { workspace = true }
# Tests / examples / benches re-enable `std` + `std_rng` on top of the
# library-side no_std-friendly default. See SECURITY.md and CHANGELOG.
rand       = { workspace = true, features = ["std", "std_rng", "getrandom"] }
# ACVP conformance harness — parses NIST ACVP JSON vectors in
# `tests/test_acvp.rs` (gated on `--cfg KYBER_SECURITY_PARAMETERat`).
serde      = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
# Property-based testing (`tests/test_properties.rs`) — proves
# panic-freedom + KEM correctness across millions of random inputs.
proptest    = { workspace = true }
rand_chacha = { workspace = true }
# Snapshot testing — secret-redaction Debug regressions
# (`tests/test_snapshots.rs`).
insta       = { workspace = true }
# Welch's t-test for the constant-time analysis harness
# (`benches/dudect.rs`). Pairs with `scripts/dudect.sh`.
dudect-bencher = { workspace = true }

[build-dependencies]
# `optional = true` on a build-dep is gated by the matching `dep:`
# reference in the `[features]` table (see `avx2`, `nasm`).
cc      = { workspace = true, optional = true }
nasm-rs = { workspace = true, optional = true }

[lib]
# v0.0.7 narrows `crate-type` from `["cdylib", "rlib", "staticlib"]` to `rlib`
# only. See CHANGELOG. The dedicated `kyberlib-wasm` workspace crate (issue
# #144, Phase 1.3) re-introduces the cdylib path.
crate-type = ["rlib"]
name       = "kyberlib"
path       = "src/lib.rs"

# Criterion micro-benchmarks (legacy + typed API + handshake throughput).
[[bench]]
name    = "api"
harness = false   # criterion provides its own main via `criterion_main!`

# dudect-bencher Welch's t-test harness for constant-time analysis.
# Run with: `cargo bench -p kyberlib --bench dudect -- --continuous decap_valid_vs_invalid`
# (see scripts/dudect.sh for the production runner).
[[bench]]
name    = "dudect"
harness = false   # dudect-bencher provides its own main via `ctbench_main!`

[features]
### Security Levels ###
# Defaults to `kyber768` if none selected. Phase 3 of the v0.0.7 roadmap
# replaces this Cargo-feature switch with sealed marker types
# (`MlKem512`, `MlKem768`, `MlKem1024`) — see issues #130 / #153 / #158.
#
# `std` is on by default so `cargo build` works for typical applications.
# For embedded / `no_std` consumers set `default-features = false` and
# re-enable `kyber768` explicitly.
default = ["kyber768", "std"]
# kyber512 = []
kyber768 = []
# kyber1024 = []

### Export IND-CPA primitives (advanced — bypasses the FO transform).
hazmat = []

### Additional features
# 90s mode uses AES256-CTR and SHA2 as primitives instead of SHAKE.
# Removed from FIPS 203; retained pre-spec-migration for compatibility.
90s          = ["dep:sha2"]
90s-fixslice = ["90s", "dep:aes", "dep:ctr"]
avx2         = ["dep:cc"]
nasm         = ["dep:nasm-rs", "avx2"]
std          = ["zeroize/std"]
# `benchmarking` re-exports the internal `kem::*` module for hazmat-
# style access from `benches/api.rs`. Not for production use — the
# public API is `keypair` / `encapsulate` / `decapsulate` and the typed
# `MlKem768::*` surface. See lib.rs:285 for the gated re-export.
benchmarking = []

# --- Phase 5 backend selection (skeleton) ----------------------------------
#
# Mutually exclusive backends for the ML-KEM primitive. By default
# kyberlib uses its own pure-Rust implementation. Enabling one of these
# delegates the underlying KEM to an alternative backend — at the
# cost of adding a heavy dependency. Both features are currently
# stubs: enabling them today is a no-op (the build emits a
# compile-time `compile_error!` pointer to the tracking issue so the
# misconfiguration is visible).
#
# `fips` — delegate to `aws-lc-rs`. AWS-LC FIPS 3.0 is the first
#   cryptographic library to include ML-KEM in a FIPS 140-3
#   validation (CMVP "in process", 2025). Required for FedRAMP High,
#   NIST SP 800-53 SC-13, CNSA 2.0. Tracking: #170.
fips = []
# `verified` — delegate to `libcrux-ml-kem`. F* + hax-verified for
#   panic-freedom, functional correctness, and secret-independence
#   across the portable + AVX2 backends. Caveat: Symbolic Software
#   (eprint 2026/192) found three bugs in the verified surface —
#   formal verification is necessary but not sufficient. Tracking:
#   #171.
verified = []

[package.metadata.docs.rs]
features     = ["kyber768", "std", "hazmat"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.clippy]
warn-lints = ["clippy::all", "clippy::pedantic", "clippy::cargo", "clippy::nursery"]

[lints]
workspace = true
